# pascal-gov

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml  lint.yml
include/daemon/: config.h  lockfile.h  state.h
include/pascal_gov/: math.h  parser.h  poller.h  psi.h  sensor.h  str.h  sysfs.h  thermal.h  time.h
src/core/: dummy.c
src/hal/: psi.c  sensor.c  sysfs.c  topology.c
src/sched/: poller.c  thermal.c
src/sys/: lockfile.c
